--- a/Páginaweb1.html
+++ b/Páginaweb1.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Página web de alumno 1</title>
+    <title>Alex</title>
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>Esta es la página web del alumno 1</h1>
-    <p>Este es el párrafo donde ha de describirse>
+    <h1>Esta es la página web del Alex De Lucas</h1>
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; Alex De lucas es un alumno de San José Obrero.<br/>
+      <br/>
+      &nbsp; &nbsp; &nbsp; &nbsp;Tiene 27 años, y a pesar de querer aprender mucho, no suele tener demasiado tiempo libre...<br/>
+      <br/>
+      &nbsp; &nbsp; &nbsp; &nbsp;Esto es debido a la cantidad de cosas que hace.
+    </p>
   </body>
 
 
